IKKRNBSP-3043 arm64/8994:defconfig: enable TZ log and CPU CTX
Enable TZ Log and CPU context dump after watchdog reset.

Change-Id: I2dfa1463a2ec58bd4b1737cf76747f0f8803e4d7
Signed-off-by: Yi-wei Zhao <gbjc64@motorola.com>
Signed-off-by: Hong-Mei Li <a21834@motorola.com>
Reviewed-on: http://gerrit.mot.com/722588
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -560,6 +560,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_MEMORY_DUMP_V2=y
 CONFIG_MSM_WATCHDOG_V2=y
+CONFIG_MSM_WATCHDOG_CTX_PRINT=y
 CONFIG_MSM_HVC=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
@@ -573,6 +574,8 @@ CONFIG_MSM_SCM=y
 CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
+CONFIG_MSM_TZ_LOG=y
+CONFIG_MSM_TZ_LOG_WDOG_DUMP=y
 CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_ESD_FS=y
 CONFIG_EXT2_FS=y
@@ -590,6 +593,7 @@ CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE_RAM_ANNOTATION_APPEND=y
 CONFIG_F2FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
