--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -573,7 +573,10 @@ CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_FS_XATTR=y
 CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_FS_XATTR=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
@@ -606,6 +609,7 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_PFT=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_CRYPTO=y
+CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_CTR=y
