--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -606,6 +606,7 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_OOPS_LOG_BUFFER=y
 CONFIG_LOG_BUF_MAGIC=y
 CONFIG_OOPS_LOG_BUF_SHIFT=14
+CONFIG_DO_EXIT_WDOG=y
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_PFT=y
