defconfig: msm899x: Disable unused drivers
Disable AT24 eeprom, Moto slice and drv2667 drivers

Change-Id: I825c35738f294cf190ed2810aa571b554ab2b770
Signed-off-by: Vladimir Karpovich <vkarpovich@motorola.com>
Reviewed-on: http://gerrit.mot.com/728921
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -238,14 +238,14 @@ CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_SEC_DRIVER=y
-CONFIG_TI_DRV2667=y
-CONFIG_QCOM_LIQUID_DOCK is not set
-CONFIG_MMI_SLICE_ACCESSORY=y
+# CONFIG_TI_DRV2667 is not set
+# CONFIG_QCOM_LIQUID_DOCK is not set
+# CONFIG_MMI_SLICE_ACCESSORY is not set
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_SENSORS_MOTOSH=y
 CONFIG_MMI_FACTORY=y
 CONFIG_ALSA_TO_H2W=y
-CONFIG_EEPROM_AT24=y
+# CONFIG_EEPROM_AT24 is not set
 CONFIG_DROPBOX=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
