IKSWL-7189: defconfig: msm899x: Enable CONFIG_CNSS_SECURE_FW
Enable CONFIG_CNSS_SECURE_FW. This is needed to enable
Secure firmware download feature on wlan firmwares.

Signed-off-by: Prashanth Chakravarthy <a19110@motorola.com>
Change-Id: I2e616dc068541c2c613d539f45b6ccc7f23bd4f0
Reviewed-on: http://gerrit.mot.com/744440
SLTApproved: Slta Waiver <sltawvr@motorola.com>
SME-Granted: SME Approvals Granted
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Binesh Balasingh <binesh@motorola.com>
Reviewed-by: Christopher Fries <cfries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -288,6 +288,7 @@ CONFIG_USB_USBNET=y
 CONFIG_CNSS=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CNSS_MAC_BUG=y
+CONFIG_CNSS_SECURE_FW=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_ATH_CARDS=y
 CONFIG_WIL6210=m
