--- a/arch/arm/boot/dts/apq8026-sturgeon/apq8026-sturgeon-touch.dtsi
+++ b/arch/arm/boot/dts/apq8026-sturgeon/apq8026-sturgeon-touch.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2013-2014, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2015, HUAWEI TECHNOLOGIES CO., LTD. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -10,11 +10,4 @@
  * GNU General Public License for more details.
  */
 
-#include "dsi-panel-hx8394a-720p-video.dtsi"
-#include "dsi-panel-nt35590-720p-video.dtsi"
-#include "dsi-panel-nt35521-720p-video.dtsi"
-#include "dsi-panel-nt35596-1080p-video.dtsi"
-#include "dsi-panel-nt35590-720p-cmd.dtsi"
-#include "dsi-panel-ssd2080m-720p-video.dtsi"
-#include "dsi-panel-jdi-1080p-video.dtsi"
-#include "dsi-panel-nt35590-qvga-cmd.dtsi"
+#include "synaptics-dsx.dtsi"
