bullhead_defconfig: enable SECCOMP
Change-Id: I8c448bd68acc273970ab5be9a87bfa967b080e19
Signed-off-by: Thierry Strudel <tstrudel@google.com>

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -40,6 +40,7 @@ CONFIG_ARCH_WANTS_CTXSW_LOGGING=y
 CONFIG_NR_CPUS=6
 CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
+CONFIG_SECCOMP=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
@@ -267,10 +268,10 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_FPC1020=y
-CONFIG_INPUT_KEYCHORD=y
 # CONFIG_SERIO_I8042 is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
