IKSWL-5843: arm64: config: 8994: enable ecryptfs
Enable the eCryptfs driver to support SD card encryption.

Change-Id: Iac822f7ccadd6405f96212b7a2bbf54e67969eee
Signed-off-by: Russ Knize <Russ.Knize@motorola.com>
Reviewed-on: http://gerrit.mot.com/750845
SLTApproved: Slta Waiver <sltawvr@motorola.com>
SME-Granted: SME Approvals Granted
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -576,6 +576,7 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_TZ_LOG_WDOG_DUMP=y
 CONFIG_MMI_DEVICE_DTBS=y
+CONFIG_ECRYPT_FS=y
 CONFIG_ESD_FS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
