IKSWL-24822 msm8994_defconfig: enable MMI_HALL_NOTIFICATIONS
This change enables components necessary to support folio open/close
states detection and notifications

Change-Id: Id922cdaf44ca6146b76e78e40875e6099c61b90e
Signed-off-by: Konstantin Makariev <kmakariev@motorola.com>
Reviewed-on: http://gerrit.mot.com/758632
SLTApproved: Slta Waiver <sltawvr@motorola.com>
SME-Granted: SME Approvals Granted
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -297,6 +297,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_MMI_HALL_NOTIFICATIONS=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
