--- a/arch/arm64/boot/dts/lge/dsi-panel-jd35695b-1080p-cmd.dtsi
+++ b/arch/arm64/boot/dts/lge/dsi-panel-jd35695b-1080p-cmd.dtsi
@@ -47,6 +47,7 @@
 		qcom,mdss-dsi-underflow-color = <0x00>;
 		qcom,mdss-dsi-lp11-init;
 		qcom,mdss-dsi-border-color = <0>;
+		qcom,ulps-enabled;
 		qcom,mdss-dsi-on-command = [
 			23 01 00 00 00 00 02 ff 10
 			15 01 00 00 00 00 02 35 00
