--- a/arch/arm64/boot/dts/lge/msm8992-bullhead-pm.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8992-bullhead-pm.dtsi
@@ -76,6 +76,7 @@
 	qcom,battery-data = <&bullhead_batterydata>;
 	qcom,single-profile;
 	qcom,sw-rbias-control;
+	qcom,resume-soc = <99>;
 	qcom,fg-iterm-ma = <200>;
 	qcom,fg-chg-iterm-ma = <100>;
 	qcom,fg-cutoff-voltage-mv = <3400>;
