arm64: dts: angler: merge battery profile
Battery profile for Sunwoda.

Bug: 22104960
Change-Id: Id6e46b35cfb2c8197a69da73195dc794e8fc7e47
Signed-off-by: zhen yuan <richard.yuan@huawei.com>

--- a/arch/arm64/boot/dts/huawei/huawei-common.dtsi
+++ b/arch/arm64/boot/dts/huawei/huawei-common.dtsi
@@ -57,6 +57,7 @@
 	mtp_batterydata: qcom,battery-data {
 		qcom,batt-id-range-pct = <15>;
 		#include "batterydata-itech-3000mah.dtsi"
+		#include "Sunwoda_ATL_3450mAh_battery_profile.dtsi"
 	};
 };
 
