smelt: enable irqs on tsl2584
Enable interrupts on tsl2584 light sensor to avoid polling.

Change-Id: Ifd0ca11cf600906d7b95782a1f8cc07b0494d2b3

--- a/arch/arm/boot/dts/apq8026-smelt-common.dtsi
+++ b/arch/arm/boot/dts/apq8026-smelt-common.dtsi
@@ -556,6 +556,7 @@
 		reg = <0x29>;
 		vdd-supply = <&pm8226_l18>;
 		ams,ink_type = <0x01>;
+		gpios = <&msmgpio 71 0x0>;  /* IRQ */
 	};
 
 	/delete-node/ nfc-nci@0e;
