--- a/drivers/staging/qcacld-2.0/Kconfig
+++ b/drivers/staging/qcacld-2.0/Kconfig
@@ -45,7 +45,7 @@ config QCOM_LTE_COEX
 	bool "Enable QCOM LTE Coex feature"
 	default n
 
-config CONFIG_FEATURE_MEMDUMP
+config WLAN_FEATURE_MEMDUMP
 	bool "Enable MEMDUMP feature"
 	default n
 
