--- a/arch/arm64/boot/dts/huawei/Makefile
+++ b/arch/arm64/boot/dts/huawei/Makefile
@@ -4,7 +4,9 @@ dtb-$(CONFIG_ARCH_MSM8994) += huawei_lunch_box_va.dtb \
                               huawei_angler_v1.dtb \
                               huawei_angler_v2.dtb \
                               huawei_angler_v3.dtb \
-                              huawei_angler_v4.dtb
+                              huawei_angler_v4.dtb \
+                              huawei_angler_row_v1.dtb \
+                              huawei_angler_row_v3.dtb
 
 DTB_NAMES := $(subst $\",,$(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES))
 ifneq ($(DTB_NAMES),)
