ARM: dts: msm: add support for truly 1080p panel on 8976 CDP
This change adds support for truly 1080p panel in both command
mode and video mode for MSM8976 CDP. Add the necessary panel
power supply and backlight properties to the panel DT node
to take care of this.

Change-Id: I1b72a02506253ff3bf0c389b6f6f47bf735c5e38
Signed-off-by: Padmanabhan Komanduru <pkomandu@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976-mdss-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-mdss-cdp.dtsi
@@ -39,6 +39,16 @@
 	qcom,mdss-dsi-mode-sel-gpio-state = "dsc_mode";
 };
 
+&dsi_truly_1080_vid {
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
+	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
+};
+
+&dsi_truly_1080_cmd {
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
+	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
+};
+
 &pmx_mdss {
 	qcom,num-grp-pins = <3>;
 	qcom,pins = <&gp 25>, <&gp 66>, <&gp 107>;
