--- a/arch/arm/boot/dts/qcom/msm8976-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-mdss-panels.dtsi
@@ -17,6 +17,8 @@
 #include "dsi-panel-otm1906c-1080p-cmd.dtsi"
 #include "dsi-panel-hx8399a-1080p-video.dtsi"
 #include "dsi-panel-nt35597-dsc-wqxga-video.dtsi"
+#include "dsi-panel-truly-1080p-video.dtsi"
+#include "dsi-panel-truly-1080p-cmd.dtsi"
 
 &soc {
 	dsi_panel_pwr_supply: dsi_panel_pwr_supply {
