--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -37,6 +37,7 @@ CONFIG_SCHED_MC=y
 CONFIG_ARCH_WANTS_CTXSW_LOGGING=y
 CONFIG_PREEMPT=y
 CONFIG_ARMV7_COMPAT=y
+CONFIG_SECCOMP=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
