dts: smelt: Set fuel gauge CONFIG register every boot
Set the register since it may get changed during factory testing. Previously,
the register was only set during POR initialization.

Signed-off-by: Dmitriy Gruzman <dgruzman@motorola.com>
Change-Id: I29c05308d08b65d340616e99b23f468b4f70f588

--- a/arch/arm/boot/dts/apq8026-smelt-common.dtsi
+++ b/arch/arm/boot/dts/apq8026-smelt-common.dtsi
@@ -418,6 +418,7 @@
 		maxim,regs-init-data = <
 			0x01 0xFF00 /* Valrt Threshold, IRQ disabled */
 			0x02 0x7F80 /* Talrt Threshold, IRQ disabled */
+			0x1D 0x4254 /* CONFIG register, the same value as in batt configs below */
 		>;
 
 		maxim,enable_por_init;
