IKSWM-1408: defconfig: msm899x: Enable UID_CPUTIME
Enable UID_CPUTIME for uid_cputime stats used to
compute Battery Stats.

Change-Id: Iafacc64a8d613bb5bedb4911c6fc9cee794e9525
Signed-off-by: Ravi Vembu <raviv@motorola.com>
Reviewed-on: http://gerrit.mot.com/779107
SLTApproved: Slta Waiver <sltawvr@motorola.com>
SME-Granted: SME Approvals Granted
Submit-Approved: Jira Key <jirakey@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Ravi Chebolu <arc095@motorola.com>

--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -237,6 +237,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
+CONFIG_UID_CPUTIME=y
 CONFIG_QSEECOM=y
 CONFIG_SEC_DRIVER=y
 # CONFIG_TI_DRV2667 is not set
