--- a/arch/arm64/configs/msm8994-perf_defconfig
+++ b/arch/arm64/configs/msm8994-perf_defconfig
@@ -301,6 +301,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CTRL_ACCESS_BLK=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_SECURE_TOUCH=y
 # CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS is not set
