--- a/arch/arm64/configs/msmcortex_defconfig
+++ b/arch/arm64/configs/msmcortex_defconfig
@@ -210,7 +210,7 @@ CONFIG_BPF_JIT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
-# CONFIG_WIRELESS is not set
+CONFIG_CFG80211=y
 CONFIG_RFKILL=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
@@ -258,7 +258,8 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
-# CONFIG_WLAN is not set
+CONFIG_WCNSS_MEM_PRE_ALLOC=y
+CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
 # CONFIG_INPUT_MOUSE is not set
@@ -435,6 +436,7 @@ CONFIG_QCOM_SCM=y
 CONFIG_QCOM_SCM_XPU=y
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_MEMORY_DUMP_V2=y
+CONFIG_ICNSS=y
 CONFIG_MSM_GLADIATOR_HANG_DETECT=y
 CONFIG_MSM_CORE_HANG_DETECT=y
 CONFIG_MSM_BOOT_STATS=y
