Update ramoops memory region
- Update ramoops memory region to work on both DVT1 (2GB RAM) and
  DVT2 (3GB) RAM, make sure to specify a non reserved memory
  region, for some reason addresses below 0xd0000000 does not work
  on DVT1. Set start address to 0xdffc0000 (end of DVT2 memory)
  and size to 0x40000.

Before

- DVT1 (2GB)
  0: 0x80004000..0x80007fff
  1: 0x80100000..0x81811c37
  2: 0x82500000..0x82533113
  3: 0x82700000..0x827ef4e3
  4: 0x8f800000..0x8fffffff
  5: 0xae800000..0xaf7fffff
  6: 0xb6edc000..0xb6efefff
  7: 0xb6effe98..0xb6efffff
  8: 0xf7800000..0xffbfffff

memory
  0: 0x80000000..0x85dfffff
  1: 0x86800000..0x86bfffff
  2: 0x8d900000..0xfffffffe

- DVT2 (3GB)

reserved
  0: 0x20004000..0x20007fff
  1: 0x20100000..0x21811c37
  2: 0x22500000..0x22533117
  3: 0x22700000..0x227ef4e3
  4: 0x4e7eb000..0x4e7fefff
  5: 0x4e7fff60..0x4f7fffff
  6: 0x8f800000..0x8fffffff
  7: 0xd7c00000..0xdfffffff

memory
  0: 0x20000000..0x85dfffff
  1: 0x86800000..0x86bfffff
  2: 0x8d900000..0xdfffffff

After

- DVT1 (2GB)

reserved
  0: 0x80004000..0x80007fff
  1: 0x80100000..0x81811c37
  2: 0x82500000..0x825332ef
  3: 0x82700000..0x827ef4e7
  4: 0x8f800000..0x8fffffff
  5: 0xae800000..0xaf7fffff
  6: 0xb6edc000..0xb6efefff
  7: 0xb6effe70..0xb6efffff
  8: 0xf7800000..0xffbfffff

memory
  0: 0x80000000..0x85dfffff
  1: 0x86800000..0x86bfffff
  2: 0x8d900000..0xdffbffff
  3: 0xe0000000..0xfffffffe

- DVT2 (3GB)

reserved
  0: 0x20004000..0x20007fff
  1: 0x20100000..0x21811c37
  2: 0x22500000..0x225332f3
  3: 0x22700000..0x227ef4e7
  4: 0x4e7eb000..0x4e7fefff
  5: 0x4e7fff60..0x4f7fffff
  6: 0x8f800000..0x8fffffff
  7: 0xd7c00000..0xdfffffff

memory
   0: 0x20000000..0x85dfffff
   1: 0x86800000..0x86bfffff
   2: 0x8d900000..0xdffbffff

Change-Id: I5387341d3be5bae99e2ee5330054cde03b131109

--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -96,11 +96,11 @@
                         label = "adsp_mem";
                 };
 
-                ramoops_mem: ramoops_region@0x9ff00000 {
+                ramoops_mem: ramoops_region@0xdffc0000 {
                         linux,reserve-contiguous-region;
                         linux,reserve-region;
                         linux,remove-completely;
-                        reg = <0x0 0x9ff00000 0x0 0x40000>;
+                        reg = <0x0 0xdffc0000 0x0 0x40000>;
                         label = "ramoops_mem";
                 };
 	};
@@ -2357,7 +2357,7 @@
                 compatible = "ramoops";
                 status = "okay";
 
-                android,ramoops-buffer-start = <0x9ff00000>;
+                android,ramoops-buffer-start = <0xdffc0000>;
                 android,ramoops-buffer-size =  <0x40000>;
                 android,ramoops-console-size = <0x10000>;
                 android,ramoops-record-size = <0x10000>;
