Add physical width / height to display panel dt
- Update dijing-otm1901a and truly-hx8399c with physical width and
  height values (in mm)

b/27517897

Change-Id: I4d75fb7baca568c7eaa29973c3ceec932d92dba8

--- a/arch/arm/boot/dts/qcom/dsi-panel-truly-hx8399c-1080p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-truly-hx8399c-1080p-video.dtsi
@@ -49,6 +49,8 @@
 		qcom,mdss-dsi-bl-max-level = <4095>;
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
+                qcom,mdss-pan-physical-width-dimension = <69>;
+                qcom,mdss-pan-physical-height-dimension = <122>;
 		qcom,mdss-dsi-on-command = [
 			39 01 00 00 00 00 04
 			B9 FF 83 99
