ARM: dts: msm: Add apq8009w mtp SWOC files
To separate out apq8009w SWOC variant from msm8909w SWOC, new
dts files are added for apq8009w SWOC. In addition, rename and
update msm8909w-pm8916-mtp-ext-chg-fg dts(i) files to include
'SWOC' in their name and model, to make it explicit that these
are for SWOC.

Change-Id: Ic7c204429cf8788f1e3a5339d2be7dfbb9d92ef1
Signed-off-by: Neeraj Upadhyay <neeraju@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -170,7 +170,8 @@ dtb-$(CONFIG_ARCH_MSM8909) += msm8909-pm8916-mtp.dtb \
 	msm8909w-wtp.dtb \
 	apq8009w-wtp.dtb \
 	apq8009w-cdp.dtb \
-	msm8909w-pm8916-mtp-ext-chg-fg.dtb \
+	msm8909w-swoctp.dtb \
+	apq8009w-swoctp.dtb \
 	msm8909-pm8916-cdp.dtb \
 	msm8909w-cdp.dtb
 
