ARM: dts: msm: Enable type-c charging with floating chargers
This change also enables type-c charging with regular SDPs, hence
don't use faulty type-c to stdA cables that report high current
capability.

Change-Id: Ic8094edb7a2fa95db6c0a65303d25a2c3558195e
Signed-off-by: Manu Gautam <mgautam@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -192,6 +192,7 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
+			qcom,override-usb-current;
 			qcom,iterm-ma = <100>;
 			qcom,float-voltage-mv = <4200>;
 			qcom,resume-delta-mv = <200>;
