--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -1175,7 +1175,7 @@
 		qcom,phy-dvdd-always-on;
 		qcom,boost-sysclk-with-streaming;
 		qcom,axi-prefetch-enable;
-		qcom,enable-sdp-typec-current-limit;
+		qcom,floated-charger-enable = <1>;
 
 		qcom,msm-bus,name = "usb2";
 		qcom,msm-bus,num-cases = <3>;
