arm/dt: 8916: Harpia P1B build
P1B (DVT2) five IDs

Change-Id: Ia2f0cc29b8161d6e0ec5a7f4103abd1c64f6dc77
Signed-off-by: Yiwen Liu <liuyw2@motorola.com>
Reviewed-on: http://gerrit.mot.com/839243
SLTApproved: Slta Waiver <sltawvr@motorola.com>
SME-Granted: SME Approvals Granted
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -256,6 +256,7 @@ dtb-$(CONFIG_ARCH_MSM8916) += msm8916-harpia-p0a.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-harpia-p1.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-harpia-p1a.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-harpia-p1ad.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-harpia-p1b.dtb
 
 # Motorola 8939 Devices
 dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p0.dtb
