ARM: dts: msm: Update emergency frequency mitigation value for MSM8953
Update emergency frequency mitigation value from 800000KHz to
1036800KHz as per recommendation for MSM8953.

Change-Id: I5e866f5f45d3f62e592133e2778f01a3b1af5c64
Signed-off-by: Manaf Meethalavalappu Pallikunhi <manafm@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -490,7 +490,7 @@
 		qcom,hotplug-temp-hysteresis = <15>;
 		qcom,freq-mitigation-temp = <105>;
 		qcom,freq-mitigation-temp-hysteresis = <15>;
-		qcom,freq-mitigation-value = <800000>;
+		qcom,freq-mitigation-value = <1036800>;
 		qcom,therm-reset-temp = <115>;
 		qcom,online-hotplug-core;
 		qcom,synchronous-cluster-id = <0 1>;
