msm8916, msm8916-perf_defconfig: Enable sdcardfs
Bug: 27794037
Change-Id: Ibbc085b31be037a1970dcf486dee4d422131c581
Signed-off-by: Daniel Rosenberg <drosen@google.com>

--- a/arch/arm/configs/msm8916-perf_defconfig
+++ b/arch/arm/configs/msm8916-perf_defconfig
@@ -558,6 +558,7 @@ CONFIG_FUSE_FS=y
 CONFIG_OVERLAYFS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
+CONFIG_SDCARD_FS=y
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_FILE_DIRECT=y
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
