defconfig: arm64: msmcortex: Enable RPM stats/logs
RPM stat/logs provide stats about system sleep modes.

Change-Id: I10dc1bdb2fcfe216cdcf147eab936c2f92b5217a
Signed-off-by: Mahesh Sivasubramanian <msivasub@codeaurora.org>

--- a/arch/arm64/configs/msmcortex_defconfig
+++ b/arch/arm64/configs/msmcortex_defconfig
@@ -524,6 +524,9 @@ CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
+CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+CONFIG_MSM_RPM_LOG=y
+CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_BW_HWMON=y
