--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -523,6 +523,9 @@ CONFIG_TRACER_PKT=y
 CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_CORE_CTL_HELPER=y
+CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+CONFIG_MSM_RPM_LOG=y
+CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_ARM_MEMLAT_MON=y
