msm: kgsl: Add gcc_gpu_iref_clk to list of GPU clocks
GPU will vote off gcc_gpu_iref_clk when going to low power modes.

CRs-Fixed: 1024948
Change-Id: I13b7a70f1fa748f2f4cdfb485dda2f7857e0b3d2
Signed-off-by: Oleg Perelet <operelet@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msmcobalt-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msmcobalt-gpu.dtsi
@@ -84,10 +84,12 @@
 			<&clock_gcc clk_gcc_bimc_gfx_clk>,
 			<&clock_gcc clk_gcc_gpu_bimc_gfx_clk>,
 			<&clock_gpu clk_gpucc_gfx3d_isense_clk>,
-			<&clock_gpu clk_gpucc_rbcpr_clk>;
+			<&clock_gpu clk_gpucc_rbcpr_clk>,
+			<&clock_gcc clk_gcc_gpu_iref_clk>;
 
 		clock-names = "core_clk", "iface_clk", "rbbmtimer_clk",
-			"mem_clk", "mem_iface_clk", "isense_clk", "rbcpr_clk";
+			"mem_clk", "mem_iface_clk", "isense_clk", "rbcpr_clk",
+			"iref_clk";
 
 		/* Bus Scale Settings */
 		qcom,gpubw-dev = <&gpubw>;
