ARM: dts: msm: Remove redundant interrupt type flag for msmcobalt
Use existing IRQ flags definitions since devfreq_spdm driver no longer
overrides interrupt type. Interrupt-edge property is no longer used
as an indicator of interrupt type.

Change-Id: Iddf6b1b8a85100bbb3b6ff2d2dda88880b6e64f2
Signed-off-by: David Dai <daidavid1@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msmcobalt-bus.dtsi
+++ b/arch/arm/boot/dts/qcom/msmcobalt-bus.dtsi
@@ -1446,7 +1446,6 @@
 	devfreq_spdm_gov {
 		compatible = "qcom,gov_spdm_hyp";
 		interrupt-names = "spdm-irq";
-		interrupt-edge;
-		interrupts = <0 192 0>;
+		interrupts = <0 192 IRQ_TYPE_EDGE_RISING>;
 	};
 };
