--- a/arch/arm64/configs/msmcortex-perf_defconfig
+++ b/arch/arm64/configs/msmcortex-perf_defconfig
@@ -484,6 +484,7 @@ CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_MEMORY_DUMP_V2=y
 CONFIG_ICNSS=y
 CONFIG_MSM_BOOT_STATS=y
+CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
