--- a/arch/arm64/configs/msmcortex_defconfig
+++ b/arch/arm64/configs/msmcortex_defconfig
@@ -511,6 +511,7 @@ CONFIG_MSM_CORE_HANG_DETECT=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_QCOM_CPUSS_DUMP=y
+CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
