--- a/arch/arm/boot/dts/qcom/vplatform-lfv-ion.dtsi
+++ b/arch/arm/boot/dts/qcom/vplatform-lfv-ion.dtsi
@@ -22,6 +22,12 @@
 			qcom,ion-heap-type = "CARVEOUT";
 		};
 
+		qcom,ion-heap@27 { /* QSEECOM HEAP */
+			reg = <27>;
+			memory-region = <&qseecom_mem>;
+			qcom,ion-heap-type = "DMA";
+		};
+
 		qcom,ion-heap@28 { /* Audio Heap */
 			reg = <28>;
 			memory-region = <&ion_audio>;
