--- a/drivers/input/touchscreen/focaltech_mmi/Kconfig
+++ b/drivers/input/touchscreen/focaltech_mmi/Kconfig
@@ -75,10 +75,21 @@ config TOUCHSCREEN_FOCALTECH_UPGRADE_8006U_MMI
 	select TOUCHSCREEN_FOCALTECH_UPGRADE_MMI
 	help
 	  Say Y here will
-	  -Add FT800UM IC upgrade support.
+	  -Add FT8006U IC upgrade support.
 	  -Add new Focaltech firmware upgrade code.
 
 	  If unsure, say N.
+
+config TOUCHSCREEN_FOCALTECH_UPGRADE_8006S_MMI
+        bool "Add ft8006S IC support for Focaltech Touchscreen"
+        depends on TOUCHSCREEN_FOCALTECH_UPGRADE_8006U_MMI
+        select TOUCHSCREEN_FOCALTECH_UPGRADE_MMI
+        help
+          Say Y here will
+          -Add FT8006S IC upgrade support.
+          -Add new Focaltech firmware upgrade code.
+
+          If unsure, say N.
 
 config TOUCHSCREEN_FOCALTECH_SECURE_TOUCH_MMI
 	bool "Secure Touch support for Focaltech Touchscreen"
