--- a/arch/arm/boot/dts/qcom/msm8998-camera-sensor-mot-messi.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998-camera-sensor-mot-messi.dtsi
@@ -197,10 +197,13 @@
 				 &cam_sensor_rear_active>;
 		pinctrl-1 = <&cam_sensor_mclk2_suspend
 				 &cam_sensor_rear_suspend>;
-		gpios = <&tlmm 15 0>;
-		qcom,gpio-req-tbl-num = <0>;
-		qcom,gpio-req-tbl-flags = <1>;
-		qcom,gpio-req-tbl-label = "CAMIF_MCLK2";
+		gpios = <&tlmm 15 0>,
+				<&tlmm 100 0>;
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <1 0>;
+		qcom,gpio-reset = <1>;
+		qcom,gpio-req-tbl-label = "CAMIF_MCLK2",
+				"CAM_RESET";
 		qcom,sensor-position = <0>;
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
@@ -297,5 +300,35 @@
 				<&clock_mmss clk_mmss_camss_mclk2_clk>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
+	};
+};
+
+&tlmm {
+	cam_sensor_rear_active: cam_sensor_rear_active {
+		/* Reset, DVDD, AVDD+AFVDD, Front-Mono Mipi Mux */
+		mux {
+			pins = "gpio23", "gpio24", "gpio22", "gpio100", "gpio128";
+			function = "gpio";
+		};
+
+		config {
+			pins = "gpio23", "gpio24", "gpio22", "gpio100", "gpio128";
+			drive-strength = <2>;
+			bias-disable;
+		};
+	};
+
+	cam_sensor_rear_suspend: cam_sensor_rear_suspend {
+		/* Reset, DVDD, AVDD+AFVDD, Front-Mono Mipi Mux */
+		mux {
+			pins = "gpio23", "gpio24", "gpio22", "gpio100", "gpio128";
+			function = "gpio";
+		};
+
+		config {
+			pins = "gpio23", "gpio24", "gpio22", "gpio100", "gpio128";
+			drive-strength = <2>;
+			bias-pull-down;
+		};
 	};
 };
