ANDROID: gki_defconfig: Enable CONFIG_REMOTEPROC
This patch adds required CONFIG_REMOTEPROC to the gki_defconfig
in order for functionality like wifi to work on the db845c.

Bug: 146449535
Change-Id: I21a233b193b22b84ebb1462daf324bcc6b5c6594
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/arch/x86/configs/gki_defconfig
+++ b/arch/x86/configs/gki_defconfig
@@ -326,6 +326,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_UIO=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
+CONFIG_REMOTEPROC=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_IIO=y
 CONFIG_ANDROID=y
