ARM: dts: sa515m: correct sideband wakeup gpio numbers
This commit populates gpio numbers as per sa515m ccard55
and moves sideband wake up specific nodes and properties
to ccard specific device tree files from common device
tree file.

Change-Id: I4f162972dbabcb458424b5b76509cc42080ff753
Signed-off-by: Rishi Gupta <rishgupt@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sa515m-ccard.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa515m-ccard.dtsi
@@ -643,3 +643,17 @@
 		};
 	};
 };
+
+&tlmm {
+	wakeup_gpio_default: wakeup_gpio_default {
+		mux {
+			pins = "gpio96";
+			function = "gpio";
+		};
+		config {
+			pins = "gpio96";
+			drive-strength = <2>;
+			bias-pull-down;
+		};
+	};
+};
