ARM: dts: msm: Enable Defenderault thermal zones and cooling devices for sdm429
Enable Defenderault thermal zones like TSENS user_space rules, cpu, gpu
stepwise mitigation rules, low temperature vdd restriction rules,
skin thermistor rules and BCL thermal zone rules for sdm429.

Change-Id: I9e0d3cc5657e856e44c6ae3fd6d30eb2dcb75415
Signed-off-by: Manaf Meethalavalappu Pallikunhi <manafm@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sdm429.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm429.dtsi
@@ -1420,6 +1420,17 @@
 			< 1708800 MHZ_TO_MBPS( 749, 8) >;
 	};
 
+	tsens0: tsens@4a8000 {
+		compatible = "qcom,msm8937-tsens";
+		reg = <0x4a8000 0x1000>,
+			<0x4a9000 0x1000>,
+			<0xa4000  0x1000>;
+		reg-names = "tsens_srot_physical",
+			"tsens_tm_physical", "tsens_eeprom_physical";
+		interrupts = <0 184 0>;
+		interrupt-names = "tsens-upper-lower";
+		#thermal-sensor-cells = <1>;
+	};
 };
 
 #include "sdm429-gdsc.dtsi"
@@ -1428,6 +1439,7 @@
 #include "sdm429-mdss.dtsi"
 #include "sdm429-mdss-pll.dtsi"
 #include "sdm429-audio.dtsi"
+#include "sdm429-thermal.dtsi"
 
 &venus_gdsc {
 	clock-names = "bus_clk", "core_clk";
