--- a/arch/arm64/boot/dts/qcom/sdm429w-pm660.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm429w-pm660.dtsi
@@ -122,7 +122,7 @@
 	qcom,fg-bmd-en-delay-ms = <300>;
 	qcom,fg-force-load-profile;
 	qcom,fg-jeita-thresholds = <0 20 45 60>;
-	status = "disabled";
+	status = "ok";
 };
 
 &pm660_haptics {
